--- a/app/views/framing_saws/index.html.erb
+++ b/app/views/framing_saws/index.html.erb
@@ -24,8 +24,8 @@
       <tr>
         <td><%= framing_saw.created_at.to_date %></td>
         <td><%= framing_saw.batch %></td>
-        <td><%= framing_saw.plant %></td>
-        <td><%= framing_saw.area %></td>
+        <td><%= framing_saw.plant.name %></td>
+        <td><%= framing_saw.area.name%></td>
         <td><%= framing_saw.product_id %></td>
         <td><%= framing_saw.quality.name %></td>
         <td><%= framing_saw.dimension.name %></td>
